--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "composer/installers": "~1.0"
     },
     "extra": {
-        "display-name": "phpBB Forum API",
+        "display-name": "Forum API",
         "soft-require": {
             "phpbb/phpbb": ">=3.2.0,<3.3.0@dev"
         }
