--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1,3 +1,3 @@
-davidiq_forumapi_controller:
-    path: /forumapi
-    defaults: { _controller: davidiq.forumapi.controller:handle }
+davidiq_forumapi_userinfo:
+    path: /forumapi/userinfo
+    defaults: { _controller: davidiq.forumapi.controller:userinfo }
